--- a/ap-madang/requirements.txt
+++ b/ap-madang/requirements.txt
@@ -10,6 +10,8 @@ certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.6
 colorama==0.4.3
+coreapi==2.3.3
+coreschema==0.0.4
 cryptography==35.0.0
 Django==3.2.7
 djangorestframework==3.12.4
@@ -17,26 +19,36 @@ docker==4.4.4
 docker-compose==1.25.5
 dockerpty==0.4.1
 docopt==0.6.2
+drf-yasg==1.20.0
 future==0.16.0
 idna==3.2
+inflection==0.5.1
+itypes==1.2.0
+Jinja2==3.0.2
 jmespath==0.10.0
 jsonschema==3.2.0
+MarkupSafe==2.0.1
 mysqlclient==2.0.3
+packaging==21.0
 paramiko==2.7.2
 pathspec==0.5.9
 protobuf==3.17.3
 pycparser==2.20
 PyNaCl==1.4.0
+pyparsing==2.4.7
 pyrsistent==0.18.0
 python-dateutil==2.8.2
 pytz==2021.1
 PyYAML==5.4.1
 requests==2.26.0
+ruamel.yaml==0.17.16
+ruamel.yaml.clib==0.2.6
 semantic-version==2.8.5
 six==1.14.0
 sqlparse==0.4.2
 termcolor==1.1.0
 texttable==1.6.4
+uritemplate==3.0.1
 urllib3==1.26.7
 wcwidth==0.1.9
 websocket-client==0.59.0
