--- a/ap-madang/requirements.txt
+++ b/ap-madang/requirements.txt
@@ -44,10 +44,12 @@ requests==2.26.0
 ruamel.yaml==0.17.16
 ruamel.yaml.clib==0.2.6
 semantic-version==2.8.5
+setuptools-rust==0.12.1
 six==1.14.0
 sqlparse==0.4.2
 termcolor==1.1.0
 texttable==1.6.4
+toml==0.10.2
 uritemplate==3.0.1
 urllib3==1.26.7
 wcwidth==0.1.9
