--- a/ap-madang/requirements.txt
+++ b/ap-madang/requirements.txt
@@ -28,7 +28,7 @@ Jinja2==3.0.2
 jmespath==0.10.0
 jsonschema==3.2.0
 MarkupSafe==2.0.1
-mysqlclient==2.0.3
+mysqlclient
 packaging==21.0
 paramiko==2.7.2
 pathspec==0.5.9
