chore: update pre setting

--- a/ap-madang/.ebextentions/00_upgrade_pip.config
+++ b/ap-madang/.ebextentions/00_upgrade_pip.config
@@ -2,3 +2,7 @@ commands:
   pip_upgrade:
     command: /opt/python/run/venv/bin/pip install --upgrade pip
     ignoreErrors: false
+  install_mysql:
+    command: sudo yum install libmysqlclient-dev
+  install_mysql2:
+    command: sudo yum install default-libmysqlclient-dev
