feat: add config

--- a/ap-madang/.ebextentions/django.config
+++ b/ap-madang/.ebextentions/django.config
@@ -8,4 +8,4 @@ container_commands:
 
 option_settings:
   aws:elasticbeanstalk:container:python:
-    WSGIPath: config/wsgi.py
+    WSGIPath: config.wsgi:application
