--- a/ap-madang/.ebextentions/django.config
+++ b/ap-madang/.ebextentions/django.config
@@ -7,5 +7,7 @@ container_commands:
     leader_only: true
 
 option_settings:
+  aws:elasticbeanstalk:application:environment:
+    DJANGO_SETTINGS_MODULE: "config.settings"
   aws:elasticbeanstalk:container:python:
     WSGIPath: config.wsgi:application
