--- a/ap-madang/requirements.txt
+++ b/ap-madang/requirements.txt
@@ -14,6 +14,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==35.0.0
 Django==3.2.7
+django-cors-headers==3.10.0
 djangorestframework==3.12.4
 docker==4.4.4
 docker-compose==1.25.5
