--- a/ap-madang/.ebextentions/00_upgrade_pip.config
+++ b/ap-madang/.ebextentions/00_upgrade_pip.config
@@ -2,3 +2,6 @@ commands:
   pip_upgrade:
     command: /opt/python/run/venv/bin/pip install --upgrade pip
     ignoreErrors: false
+  install_mysql_devel:
+    command: sudo yum install mysql-devel mysql-lib
+    ignoreErrors: false
