--- a/ap-madang/.ebextentions/00_upgrade_pip.config
+++ b/ap-madang/.ebextentions/00_upgrade_pip.config
@@ -1,6 +1,6 @@
 commands:
   pip_upgrade:
-    command: /opt/python/run/venv/bin/pip install --upgrade pip
+    command: sudo /opt/python/run/venv/bin/pip install --upgrade pip
     ignoreErrors: false
   install_mysql_devel:
     command: sudo yum install mysql-devel mysql-lib
