--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -27,6 +27,7 @@ jobs:
       run: |
         cd ap-madang
         python -m pip install --upgrade pip
+        pip install -r requirements.txt
         pip freeze > requirements.txt
     - name: create .env
       run: |
