feat: add prod github actions

--- a/.github/workflows/deploy_prod.yml
+++ b/.github/workflows/deploy_prod.yml
@@ -1,8 +1,8 @@
-name: Deploy to dev
+name: Deploy to prod
 
 on:
   push:
-    branches: [develop]
+    branches: [main]
 
 jobs:
   build:
@@ -29,14 +29,13 @@ jobs:
         python -m pip install --upgrade pip
         pip freeze > requirements.txt
         pip install -r requirements.txt
-    - name: Create .env
+    - name: create .env
       run: |
         cd ap-madang
         touch .env
         echo DEBUG="False" >> .env
         echo SECRET_KEY="${{ secrets.SECRET_KEY }}" >> .env
         cat .env
-    
     - name: Collect Static
       run: |
         cd ap-madang
