--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -28,7 +28,7 @@ jobs:
         cd ap-madang
         python -m pip install --upgrade pip
         pip freeze > requirements.txt
-        pip install -r requirements.txt
+      # pip install -r requirements.txt
     - name: Create .env
       run: |
         cd ap-madang
@@ -36,6 +36,7 @@ jobs:
         echo DEBUG="False" >> .env
         echo SECRET_KEY="${{ secrets.SECRET_KEY }}" >> .env
         cat .env
+        pip install dotenv
     
     - name: Collect Static
       run: |
