--- a/ap-madang/requirements.txt
+++ b/ap-madang/requirements.txt
@@ -16,6 +16,7 @@ cryptography==35.0.0
 Django==3.2.7
 django-cors-headers==3.10.0
 django-dotenv==1.4.2
+django-rest-swagger==2.2.0
 djangorestframework==3.12.4
 docker==4.4.4
 docker-compose==1.25.5
@@ -31,11 +32,13 @@ jmespath==0.10.0
 jsonschema==3.2.0
 MarkupSafe==2.0.1
 mysqlclient==2.0.3
+openapi-codec==1.3.2
 packaging==21.0
 paramiko==2.7.2
 pathspec==0.5.9
 protobuf==3.17.3
 pycparser==2.20
+PyJWT==2.2.0
 PyNaCl==1.4.0
 pyparsing==2.4.7
 pyrsistent==0.18.0
@@ -47,6 +50,7 @@ ruamel.yaml==0.17.16
 ruamel.yaml.clib==0.2.6
 semantic-version==2.8.5
 setuptools-rust==0.12.1
+simplejson==3.17.5
 six==1.14.0
 sqlparse==0.4.2
 termcolor==1.1.0
