--- a/ap-madang/requirements.txt
+++ b/ap-madang/requirements.txt
@@ -3,7 +3,8 @@ attrs==21.2.0
 awsebcli==3.20.2
 bcrypt==3.2.0
 blessed==1.19.0
-botocore==1.21.54
+boto3==1.18.64
+botocore==1.21.64
 cached-property==1.5.2
 cement==2.8.2
 certifi==2021.5.30
@@ -14,10 +15,12 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==35.0.0
 Django==3.2.7
+django-admin-json-editor==0.2.3
 django-cors-headers==3.10.0
 django-crontab==0.7.1
 django-dotenv==1.4.2
 django-rest-swagger==2.2.0
+django-storages==1.12.2
 djangorestframework==3.12.4
 docker==4.4.4
 docker-compose==1.25.5
@@ -37,6 +40,7 @@ openapi-codec==1.3.2
 packaging==21.0
 paramiko==2.7.2
 pathspec==0.5.9
+Pillow==8.4.0
 protobuf==3.17.3
 pycparser==2.20
 PyJWT==2.2.0
@@ -49,6 +53,7 @@ PyYAML==5.4.1
 requests==2.26.0
 ruamel.yaml==0.17.16
 ruamel.yaml.clib==0.2.6
+s3transfer==0.5.0
 semantic-version==2.8.5
 setuptools-rust==0.12.1
 simplejson==3.17.5
