--- a/.github/workflows/deploy_dev.yml
+++ b/.github/workflows/deploy_dev.yml
@@ -34,12 +34,14 @@ jobs:
         touch .env
         echo DEBUG="False" >> .env
         echo SECRET_KEY="${{ secrets.SECRET_KEY }}" >> .env
+        echo AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}" >> .env
+        echo AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> .env
         cat .env
   
     - name: Collect Static
       run: |
         cd ap-madang
-        python manage.py collectstatic
+        python manage.py collectstatic --noinput
   
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
