--- a/ap-madang/requirements.txt
+++ b/ap-madang/requirements.txt
@@ -55,6 +55,7 @@ ruamel.yaml==0.17.16
 ruamel.yaml.clib==0.2.6
 s3transfer==0.5.0
 semantic-version==2.8.5
+sentry-sdk==1.4.3
 setuptools-rust==0.12.1
 simplejson==3.17.5
 six==1.14.0
