--- a/ap-madang/requirements.txt
+++ b/ap-madang/requirements.txt
@@ -18,6 +18,7 @@ Django==3.2.7
 django-admin-json-editor==0.2.3
 django-cors-headers==3.10.0
 django-crontab==0.7.1
+django-debug-toolbar==3.2.2
 django-dotenv==1.4.2
 django-rest-swagger==2.2.0
 django-storages==1.12.2
